--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -107,6 +107,71 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-25">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-25-node-share.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/823330949e90bc030d363139bfc4db3d.webp" alt="「4月25日」最高速度20.9M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-25-node-share.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月25日」最高速度20.9M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了美国、新加坡、韩国、日本、欧洲、加拿大、香港等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-24">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-24-node-share-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/23719af02f410bf11c49229669ae7202.webp" alt="「4月24日」最高速度20M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-24-node-share-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月24日」最高速度20M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了香港、日本、加拿大、欧洲、美国、新加坡、韩国等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-23">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-23-free-node-subscribe.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/291f39868df7237a0f3ec70e78e9a24b.webp" alt="「4月23日」最高速度22.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-23-free-node-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月23日」最高速度22.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了香港、美国、新加坡、加拿大、欧洲、韩国、日本等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-22">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-22-free-v2ray.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/8be83b8774f88a8347879125816b5e62.webp" alt="「4月22日」最高速度20.7M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-22-free-v2ray.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月22日」最高速度20.7M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了韩国、加拿大、日本、美国、新加坡、香港、欧洲等地区,最高速度可达20.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-20">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-20-free-node-subscribe.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/37002d76718f469b4a4e2c3ae6e5a20a.webp" alt="「4月20日」最高速度18.8M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-20-free-node-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月20日」最高速度18.8M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、新加坡、香港、日本、美国、欧洲、韩国等地区,最高速度可达18.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2025-04-19">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-4-19-free-high-speed-nodes.htm" class="xcblog-blog-url">
@@ -172,73 +237,8 @@
                                     <p>这一次的节点更新覆盖了日本、美国、欧洲、韩国、香港、加拿大、新加坡等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-04-14">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-4-14-free-subscribe-node.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/23719af02f410bf11c49229669ae7202.webp" alt="「4月14日」最高速度19.2M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-4-14-free-subscribe-node.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月14日」最高速度19.2M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了韩国、日本、香港、加拿大、新加坡、美国、欧洲等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-04-13">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-4-13-free-subscribe-node.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/556b5dbcfe6584f0352cb6fadde73408.webp" alt="「4月13日」最高速度18.3M/S，2025年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-4-13-free-subscribe-node.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月13日」最高速度18.3M/S，2025年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了日本、香港、加拿大、新加坡、美国、韩国、欧洲等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-04-12">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-4-12-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/fc8c592510f04d04d9f99cdf3ce8408d.webp" alt="「4月12日」最高速度19.5M/S，2025年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-4-12-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月12日」最高速度19.5M/S，2025年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了日本、新加坡、美国、香港、加拿大、欧洲、韩国等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-04-11">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-4-11-node-share-links.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/23719af02f410bf11c49229669ae7202.webp" alt="「4月11日」最高速度18.4M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-4-11-node-share-links.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月11日」最高速度18.4M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了欧洲、美国、韩国、新加坡、日本、加拿大、香港等地区,最高速度可达18.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-04-10">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-4-10-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/050eeaeae15c4f80c45d1b2f1bf69e02.webp" alt="「4月10日」最高速度19.5M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-4-10-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月10日」最高速度19.5M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了香港、新加坡、美国、加拿大、欧洲、日本、韩国等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
-                            <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>                        </div>
+                            <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>                        </div>
                     </div>
                     <div class="col-md-3">
                         <div class="panel panel-default">
@@ -247,16 +247,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-102372.htm" title="动物疫苗行业排名前十名有哪些 动物疫苗行业排名前十名有哪些品牌">动物疫苗行业排名前十名有哪些 动物疫苗行业排名前十名有哪些品牌</a></li>
-                        <li class="py-2"><a href="/news/article-96499.htm" title="动物医生执照的报考条件要求（动物医生职业资格证书）">动物医生执照的报考条件要求（动物医生职业资格证书）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-26-free-node-subscribe.htm" title="「4月26日」最高速度18M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「4月26日」最高速度18M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-106331.htm" title="jQuery实现呼吸灯轮播图">jQuery实现呼吸灯轮播图</a></li>
-                        <li class="py-2"><a href="/news/article-89762.htm" title="我们如何从MySQL表中删除多行？">我们如何从MySQL表中删除多行？</a></li>
-                        <li class="py-2"><a href="/news/article-111500.htm" title="兽药排名前十强 兽药排名前十强正规厂家">兽药排名前十强 兽药排名前十强正规厂家</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-24-node-share-links.htm" title="「4月24日」最高速度20M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「4月24日」最高速度20M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-103924.htm" title="【LINT】cpplint修改版：自定义编码风格检查工具lint_在线工具">【LINT】cpplint修改版：自定义编码风格检查工具lint_在线工具</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-6-free-node-subscribe-links.htm" title="「4月6日」最高速度22.9M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「4月6日」最高速度22.9M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-20-free-node-subscribe.htm" title="「4月20日」最高速度18.8M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「4月20日」最高速度18.8M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-92021.htm" title="成都狗狗宠物领养中心（成都狗狗领养中心官网）">成都狗狗宠物领养中心（成都狗狗领养中心官网）</a></li>
+                        <li class="py-2"><a href="/news/article-108156.htm" title="被猫抓伤要***吗?没出血也没有破皮怎么办（被猫抓了没出血没破皮要***吗）">被猫抓伤要***吗?没出血也没有破皮怎么办（被猫抓了没出血没破皮要***吗）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-13-free-subscribe-node.htm" title="「5月13日」最高速度19.8M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「5月13日」最高速度19.8M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-87573.htm" title="宠物医院好评模板100字图片（宠物医院好评模版）">宠物医院好评模板100字图片（宠物医院好评模版）</a></li>
+                        <li class="py-2"><a href="/news/article-95024.htm" title="宠物领养免费平台有哪些软件（宠物领养免费平台有哪些软件好）">宠物领养免费平台有哪些软件（宠物领养免费平台有哪些软件好）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-19-free-high-speed-nodes.htm" title="「4月19日」最高速度20.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「4月19日」最高速度20.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-104832.htm" title="宠物疫苗批号有假的吗 宠物疫苗批号有假的吗怎么查">宠物疫苗批号有假的吗 宠物疫苗批号有假的吗怎么查</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-1-free-node-subscribe-links.htm" title="「5月1日」最高速度18.3M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「5月1日」最高速度18.3M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-109807.htm" title="使用etcd选举sdk实践master/slave故障转移_在线工具">使用etcd选举sdk实践master/slave故障转移_在线工具</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-25-node-share.htm" title="「4月25日」最高速度20.9M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「4月25日」最高速度20.9M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -268,7 +268,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
